# widgetizers

./: LICENSE  README.md  pyproject.toml  widgetizers.py
src/widgetizers/: widgetsExamples.py
src/widgetizers.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
